# immatriculation

./: README.md  setup.cfg
.github/workflows/: ci.yml
immatricuation/: siv.py
tests/: test_siv.py
