[metadata]
name = immatriculation
version = 0.1
description = Analysis of idefix output files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vdbma/immatriculation
author = M. Van den Bossche
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7.1

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
ignore = E203, E266, E741, W605, E262, E302
